# rust_file_simple_pack_up

./: Cargo.toml  README.md  readme.md
src/: main.rs
