[package]
name = "FileSystem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = "0.24.0"
num = "0.4.1"
hashbrown = "0.8.2"
flate2 = { version = "1.0.28", features = [] }
tar = { version = "0.4.40", features = [] }
chrono = {version = "0.4.31" }
time = "0.3.31"
lazy_static = "1.4.0"




